--- a/crouser.css
+++ b/crouser.css
@@ -13,6 +13,16 @@
     height: 10vh;
 }
 
+#navbar>#right>#what {
+    text-decoration: none;
+}
+
+#navbar>#left>#navbarname {
+    color: rgb(239, 18, 92);
+    font-size: 20px;
+    font-weight: bolder;
+}
+
 #navbar>#left {
     display: flex;
     /* border: 1px solid blue; */
