--- a/signupandlog.css
+++ b/signupandlog.css
@@ -47,11 +47,23 @@
     margin-top: 70px;
 }
 
+#createacc {
+    background-color: rgb(239, 18, 92);
+    border: 0px;
+    width: auto;
+    margin: auto;
+    padding: 3px 4px;
+    margin-bottom: 20px;
+    color: white;
+    font-weight: bolder;
+}
+
 
 /* login css............... */
 
 #login {
     width: 40%;
+    height: auto;
     margin: auto;
     display: grid;
     gap: 10px;
@@ -85,6 +97,7 @@
     border: 0px;
     color: whitesmoke;
     font-weight: bolder;
+    margin-bottom: 20px;
     font-size: 17px;
 }
 
@@ -94,4 +107,15 @@
     z-index: 1000;
     top: 90px;
     left: 250px;
+}
+
+#logcreateacc {
+    background-color: rgb(239, 18, 92);
+    border: 0px;
+    width: 30%;
+    margin: auto;
+    padding: 3px 4px;
+    margin-bottom: 40px;
+    color: white;
+    font-weight: bolder;
 }
