--- a/whatwe/delivery.css
+++ b/whatwe/delivery.css
@@ -1,5 +1,5 @@
 #delivery {
-    background-color: grey;
+    background-color: #F2F2F2;
     text-align: center;
     height: 300px;
     padding-top: 10px;
